--- a/css/style.css
+++ b/css/style.css
@@ -71,8 +71,7 @@ h2 {
     width: 100%;
     height: 3px;
 }
-@media screen and (max-width: 400px) {
-    .pic {
-        width: 70%;
-    }
+
+.img-responsive {
+    margin: 0 auto;
 }
